# TAM

./: CLAUDE.md  README.md  pyproject.toml
ELM-TAM/: README.md
ELM-TAM/data/benchmark/: README.md
ELM-TAM/data/benchmark/src/: ForC_data.py  GherardiSala_data_2020.py  biomes.py  bioregions.py  data.py  data_aggregation.py  data_integration.py  grassland_data.py  soilgrids.py  terraclimate_wget.sh
ELM-TAM/data/benchmark/src/ancillary/: soil_moisture.py  soilgrids.py  terraclimate.py  terraclimate_wget.sh
ELM-TAM/data/benchmark/src/landcover/: SYNMAP.py
ELM-TAM/data/parameter/: tam_sensivity.py
ELM-TAM/data/parameter/src/: tam_sensitivity.py  tam_sites.py
ELM-TAM/data/pft_maps/: pft_global_statistics.csv
ELM-TAM/src/: pft_global_mapping.py  tam_sensitivity.py  tam_sensitivity_cross_site.py  tam_sites.py
TAM/data/US-Ho1/: readme.txt
TAM/data/US-Ho1/preservation/: US_Ho1_ensemble_ascend.ipynb  US_Ho1_ensemble_combined.ipynb  US_Ho1_ensemble_combined_v1.ipynb  US_Ho1_ensemble_descend.ipynb  readme.txt
TAM/data/site_location/: site_location.R
TAM_map/: README.md
project_root_fungi/data/parameter/: ELM-TAM_parameter.ipynb
